manifests/00-servicemesh/disable-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: inventory-demo
  labels:
    app.kubernetes.io/name: disable-mtls
    app.kubernetes.io/part-of: servicemesh-inventory
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  # No selector = applies to all workloads in the namespace
  mtls:
    mode: DISABLE  # Disable mTLS entirely for this demo namespace
